Refactor(client and server)

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,3 +18,10 @@ code {
 .todo-list {
   list-style-type: none;
 }
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
