--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -23,5 +23,14 @@ code {
   flex: 1 1 auto;
 }
 
+.mat-mdc-form-field {
+  font-size: 1rem;
+  width: 100%;
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
