--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,23 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+html,
+body {
+  height: 100%;
 }
 
-code {
-  color: #e01a76;
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.todo-list {
-  list-style-type: none;
-}
 
 .spacer {
   flex: 1 1 auto;
@@ -31,6 +23,3 @@ code {
 .mt-1 {
   margin-top: 1rem;
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
