--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,14 @@
 <section>
   <mat-card>
     <mat-card-content>
-      <app-toolbar (onNewTaskEvent)="onClickNewTest()"/>
-      <router-outlet />
+      @defer {
+        <app-toolbar (onNewTaskEvent)="onClickNewTest()"/>
+        <router-outlet />
+      } @loading (minimum 1s){
+        <div class="spinner-container">
+          <mat-spinner mode="indeterminate"></mat-spinner>
+        </div>
+      }
     </mat-card-content>
   </mat-card>
 </section>
